# devague

./: .flake8  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  culture.yaml  pyproject.toml  sonar-project.properties
.agex/data/pr/: events.jsonl
.claude/: skills.local.yaml.example
.claude/skills/assign-to-workforce/: SKILL.md
.claude/skills/assign-to-workforce/scripts/: assign-to-workforce.sh
.claude/skills/cicd/: SKILL.md
.claude/skills/devague/: SKILL.md
.claude/skills/devague/scripts/: devague.sh
.claude/skills/spec-to-plan/: SKILL.md
.claude/skills/think/: SKILL.md
.devague/: current_plan
.devague/frames/: devague-0-6-0-ships-the-human-review-loop-devague.json  devague-now-ships-a-documented-spec-contract-every.json  devague-turns-a-converged-plan-into-parallel-simpl.json
.devague/plans/: devague-0-6-0-ships-the-human-review-loop-devague.json  devague-now-ships-a-documented-spec-contract-every.json  devague-turns-a-converged-plan-into-parallel-simpl.json
.github/workflows/: publish.yml  security-checks.yml  tests.yml
devague/: __init__.py  __main__.py  convergence.py  frame.py  plan.py  plan_convergence.py  plan_store.py  questions_io.py  store.py
devague/cli/: __init__.py  _errors.py  _frames.py  _output.py  _paths.py  _plans.py  _status.py
devague/cli/_commands/: capture.py  confirm.py  converge.py  explain.py  export.py  interrogate.py  learn.py  list_frames.py  new.py  park.py  plan.py  question.py  reject.py  review.py  show.py  status.py
devague/render/: __init__.py  frame_md.py  plan_md.py  review_md.py  spec_md.py
docs/: assign-to-workforce-worked-example.md  llm-guidance.md  skill-sources.md  skills.md  spec-contract.md
docs/examples/: contract-example.json
docs/plans/: 2026-05-23-devague-0-6-0-ships-the-human-review-loop-devague.md  2026-05-23-devague-turns-a-converged-plan-into-parallel-simpl.md  devague-now-ships-a-documented-spec-contract-every.md
docs/reviews/: spec-contract-frame-review.md
docs/specs/: 2026-05-23-devague-0-6-0-ships-the-human-review-loop-devague.md  2026-05-23-devague-turns-a-converged-plan-into-parallel-simpl.md  devague-0-6-0-ships-the-human-review-loop-devague.md  devague-now-ships-a-documented-spec-contract-every.md
docs/superpowers/plans/: 2026-05-22-specifix-onboarding.md  2026-05-23-devague-rename.md  2026-05-23-devague-working-backwards-engine.md
docs/superpowers/specs/: 2026-05-22-specifix-onboarding-design.md  2026-05-23-devague-spec-to-plan-design.md  2026-05-23-devague-working-backwards-design.md
specifix/: __init__.py  __main__.py
specifix/cli/: __init__.py  _errors.py  _output.py
specifix/cli/_commands/: explain.py  learn.py  whoami.py
tests/: test_cli_affordances.py  test_cli_chassis.py  test_cli_converge_export.py  test_cli_errors.py  test_cli_learn.py  test_cli_moves.py  test_cli_output.py  test_cli_paths.py  test_cli_plan.py  test_cli_question.py  test_cli_review.py  test_cli_status.py  test_cli_stubs.py  test_contract.py  test_convergence.py  test_devague_skill.py  test_frame.py  test_offline.py  test_package.py  test_plan.py  test_plan_convergence.py  test_plan_store.py  test_render.py  test_render_plan.py  test_review_loop_integration.py  test_review_loop_invariants.py  test_spec_to_plan_skill.py  test_store.py  test_think_skill.py
(+3 files in other folders)
